--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,6 +1,9 @@
 target/
 !.mvn/wrapper/maven-wrapper.jar
 
+### Ignore Database Settings ###
+src/main/resources/application-develop.properties
+
 ### Ignore Angular dist ###
 src/main/resources/static/
 src/main/resources/public/
