--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# API in localhost:8080/api
 spring.data.rest.base-path=/api
+
+##### Remove for UBER-JAR
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+# Create file application-develop.properties, and overwrite these
+spring.datasource.url=jdbc:mysql://mydb.tamk.fi/DATABASE
+spring.datasource.username=USERNAME
+spring.datasource.password=PASSWORD
+
+spring.profiles.active=develop
+##### /UBER-JAR
