--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,10 @@
 # API in localhost:8080/api
 spring.data.rest.base-path=/api
 
+# Only repositories annotated with @RepositoryRestResource are exposed,
+# unless their exported flag is set to false
+spring.data.rest.detection-strategy=annotated
+
 ##### Remove for UBER-JAR
 spring.jpa.hibernate.ddl-auto=create-drop
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
