Add explanation to create-drop

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,7 +6,10 @@ spring.data.rest.base-path=/api
 spring.data.rest.detection-strategy=annotated
 
 ##### Remove for UBER-JAR
+
+# Drop and create a clean database each time when application is started
 spring.jpa.hibernate.ddl-auto=create-drop
+
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 
 # Create file application-develop.properties, and overwrite these
