Add server port property

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 # API in localhost:8080/api
 spring.data.rest.base-path=/api
 
+# Define server port, important for Heroku
+server.port=${PORT:8080}
+
 # Only repositories annotated with @RepositoryRestResource are exposed,
 # unless their exported flag is set to false
 spring.data.rest.detection-strategy=annotated
